Add Gemfile.lock to gitignore

--- a/themes/raiser/sass/_init.scss
+++ b/themes/raiser/sass/_init.scss
@@ -102,6 +102,7 @@ $action:  #f8071c;
 $white:   #ffffff;
 $gray:    #989898;
 $lt-gray: #f1f1f1;
+$page-bg: #e5e5e5;
 
 // The amount lists, blockquotes and comments are indented.
 $indent-amount: 30px;
