--- a/themes/raiser/sass/components/_header.scss
+++ b/themes/raiser/sass/components/_header.scss
@@ -17,5 +17,9 @@ header {
     .links .first a {
       @include clear-btn;
     } 
+
+    .links li:not(.first) {
+      display: none; 
+    }
   }
 }
