--- a/themes/raiser/css/styles-rtl.css
+++ b/themes/raiser/css/styles-rtl.css
@@ -1,5 +1,5 @@
 /*
-Syntax error: File to import not found or unreadable: components/misc-rtl.
+Syntax error: File to import not found or unreadable: layouts/responsive-rtl.
               Load paths:
                 /Users/ericpaxton/vdd/data/cafb-dc-campaign/profiles/redhen_raiser/themes/raiser/sass
                 /Users/ericpaxton/.rvm/gems/ruby-2.1.2@cafb_dc/gems/compass-0.12.7/frameworks/blueprint/stylesheets
@@ -7,10 +7,10 @@ Syntax error: File to import not found or unreadable: components/misc-rtl.
                 /Users/ericpaxton/vdd/data/cafb-dc-campaign/profiles/redhen_raiser/themes/raiser/sass-extensions/zen-grids/stylesheets
                 Compass::SpriteImporter
                 Sass::Globbing::Importer
-        on line 16 of /Users/ericpaxton/vdd/data/cafb-dc-campaign/profiles/redhen_raiser/themes/raiser/sass/styles-rtl.scss
+        on line 13 of /Users/ericpaxton/vdd/data/cafb-dc-campaign/profiles/redhen_raiser/themes/raiser/sass/styles-rtl.scss
 
 Backtrace:
-/Users/ericpaxton/vdd/data/cafb-dc-campaign/profiles/redhen_raiser/themes/raiser/sass/styles-rtl.scss:16
+/Users/ericpaxton/vdd/data/cafb-dc-campaign/profiles/redhen_raiser/themes/raiser/sass/styles-rtl.scss:13
 /Users/ericpaxton/.rvm/gems/ruby-2.1.2@cafb_dc/gems/sass-3.2.19/lib/sass/tree/import_node.rb:67:in `rescue in import'
 /Users/ericpaxton/.rvm/gems/ruby-2.1.2@cafb_dc/gems/sass-3.2.19/lib/sass/tree/import_node.rb:45:in `import'
 /Users/ericpaxton/.rvm/gems/ruby-2.1.2@cafb_dc/gems/sass-3.2.19/lib/sass/tree/import_node.rb:28:in `imported_file'
@@ -44,22 +44,7 @@ Backtrace:
 /Users/ericpaxton/.rvm/gems/ruby-2.1.2@cafb_dc/gems/compass-0.12.7/lib/compass/compiler.rb:126:in `timed'
 /Users/ericpaxton/.rvm/gems/ruby-2.1.2@cafb_dc/gems/compass-0.12.7/lib/compass/compiler.rb:100:in `run'
 /Users/ericpaxton/.rvm/gems/ruby-2.1.2@cafb_dc/gems/compass-0.12.7/lib/compass/commands/watch_project.rb:147:in `recompile'
-/Users/ericpaxton/.rvm/gems/ruby-2.1.2@cafb_dc/gems/fssm-0.2.10/lib/fssm/path.rb:73:in `call'
-/Users/ericpaxton/.rvm/gems/ruby-2.1.2@cafb_dc/gems/fssm-0.2.10/lib/fssm/path.rb:73:in `run_callback'
-/Users/ericpaxton/.rvm/gems/ruby-2.1.2@cafb_dc/gems/fssm-0.2.10/lib/fssm/path.rb:55:in `callback_action'
-/Users/ericpaxton/.rvm/gems/ruby-2.1.2@cafb_dc/gems/fssm-0.2.10/lib/fssm/path.rb:35:in `update'
-/Users/ericpaxton/.rvm/gems/ruby-2.1.2@cafb_dc/gems/fssm-0.2.10/lib/fssm/state/directory.rb:39:in `block in modified'
-/Users/ericpaxton/.rvm/gems/ruby-2.1.2@cafb_dc/gems/fssm-0.2.10/lib/fssm/state/directory.rb:37:in `each'
-/Users/ericpaxton/.rvm/gems/ruby-2.1.2@cafb_dc/gems/fssm-0.2.10/lib/fssm/state/directory.rb:37:in `modified'
-/Users/ericpaxton/.rvm/gems/ruby-2.1.2@cafb_dc/gems/fssm-0.2.10/lib/fssm/state/directory.rb:18:in `refresh'
-/Users/ericpaxton/.rvm/gems/ruby-2.1.2@cafb_dc/gems/fssm-0.2.10/lib/fssm/backends/polling.rb:17:in `block (2 levels) in run'
-/Users/ericpaxton/.rvm/gems/ruby-2.1.2@cafb_dc/gems/fssm-0.2.10/lib/fssm/backends/polling.rb:17:in `each'
-/Users/ericpaxton/.rvm/gems/ruby-2.1.2@cafb_dc/gems/fssm-0.2.10/lib/fssm/backends/polling.rb:17:in `block in run'
-/Users/ericpaxton/.rvm/gems/ruby-2.1.2@cafb_dc/gems/fssm-0.2.10/lib/fssm/backends/polling.rb:15:in `loop'
-/Users/ericpaxton/.rvm/gems/ruby-2.1.2@cafb_dc/gems/fssm-0.2.10/lib/fssm/backends/polling.rb:15:in `run'
-/Users/ericpaxton/.rvm/gems/ruby-2.1.2@cafb_dc/gems/fssm-0.2.10/lib/fssm/monitor.rb:26:in `run'
-/Users/ericpaxton/.rvm/gems/ruby-2.1.2@cafb_dc/gems/fssm-0.2.10/lib/fssm.rb:70:in `monitor'
-/Users/ericpaxton/.rvm/gems/ruby-2.1.2@cafb_dc/gems/compass-0.12.7/lib/compass/commands/watch_project.rb:87:in `perform'
+/Users/ericpaxton/.rvm/gems/ruby-2.1.2@cafb_dc/gems/compass-0.12.7/lib/compass/commands/watch_project.rb:68:in `perform'
 /Users/ericpaxton/.rvm/gems/ruby-2.1.2@cafb_dc/gems/compass-0.12.7/lib/compass/commands/base.rb:18:in `execute'
 /Users/ericpaxton/.rvm/gems/ruby-2.1.2@cafb_dc/gems/compass-0.12.7/lib/compass/commands/project_base.rb:19:in `execute'
 /Users/ericpaxton/.rvm/gems/ruby-2.1.2@cafb_dc/gems/compass-0.12.7/lib/compass/exec/sub_command_ui.rb:43:in `perform!'
@@ -75,4 +60,4 @@ Backtrace:
 body:before {
   white-space: pre;
   font-family: monospace;
-  content: "Syntax error: File to import not found or unreadable: components/misc-rtl.\A               Load paths:\A                 /Users/ericpaxton/vdd/data/cafb-dc-campaign/profiles/redhen_raiser/themes/raiser/sass\A                 /Users/ericpaxton/.rvm/gems/ruby-2.1.2@cafb_dc/gems/compass-0.12.7/frameworks/blueprint/stylesheets\A                 /Users/ericpaxton/.rvm/gems/ruby-2.1.2@cafb_dc/gems/compass-0.12.7/frameworks/compass/stylesheets\A                 /Users/ericpaxton/vdd/data/cafb-dc-campaign/profiles/redhen_raiser/themes/raiser/sass-extensions/zen-grids/stylesheets\A                 Compass::SpriteImporter\A                 Sass::Globbing::Importer\A         on line 16 of /Users/ericpaxton/vdd/data/cafb-dc-campaign/profiles/redhen_raiser/themes/raiser/sass/styles-rtl.scss"; }
+  content: "Syntax error: File to import not found or unreadable: layouts/responsive-rtl.\A               Load paths:\A                 /Users/ericpaxton/vdd/data/cafb-dc-campaign/profiles/redhen_raiser/themes/raiser/sass\A                 /Users/ericpaxton/.rvm/gems/ruby-2.1.2@cafb_dc/gems/compass-0.12.7/frameworks/blueprint/stylesheets\A                 /Users/ericpaxton/.rvm/gems/ruby-2.1.2@cafb_dc/gems/compass-0.12.7/frameworks/compass/stylesheets\A                 /Users/ericpaxton/vdd/data/cafb-dc-campaign/profiles/redhen_raiser/themes/raiser/sass-extensions/zen-grids/stylesheets\A                 Compass::SpriteImporter\A                 Sass::Globbing::Importer\A         on line 13 of /Users/ericpaxton/vdd/data/cafb-dc-campaign/profiles/redhen_raiser/themes/raiser/sass/styles-rtl.scss"; }
