--- a/themes/raiser/css/styles.css
+++ b/themes/raiser/css/styles.css
@@ -6,6 +6,7 @@
  * of these @include files will be combined into a single file.
  */
 /* Import Sass mixins, variables, Compass modules, etc. */
+/* Large desktop */
 /* HTML element (SMACSS base) rules */
 /**
  * @file
@@ -584,16 +585,47 @@ body {
 }
 
 /* line 7, ../sass/base/_base.scss */
-h1, h2, h3, h4 {
+h1, h2, h3, h4, h5, h6 {
   font-family: Georgia, "Times New Roman", serif;
 }
 
 /* line 11, ../sass/base/_base.scss */
+h1 {
+  font-size: 2em;
+}
+
+/* line 13, ../sass/base/_base.scss */
+h2 {
+  font-size: 1.75em;
+}
+
+/* line 15, ../sass/base/_base.scss */
+h3 {
+  font-size: 1.5em;
+}
+
+/* line 17, ../sass/base/_base.scss */
+h4 {
+  font-size: 1.25em;
+}
+
+/* line 19, ../sass/base/_base.scss */
+h5, h6 {
+  font-size: 1.10em;
+  font-weight: bold;
+}
+
+/* line 24, ../sass/base/_base.scss */
+h6 {
+  font-size: 1em;
+}
+
+/* line 27, ../sass/base/_base.scss */
 a, a:visited {
   color: #f8971c;
   text-decoration: none;
 }
-/* line 15, ../sass/base/_base.scss */
+/* line 31, ../sass/base/_base.scss */
 a:hover, a:visited:hover {
   color: #e48308;
   -webkit-transition: all 0.3s;
@@ -932,6 +964,10 @@ header #secondary-menu .links .first a:hover {
   -moz-transition: all 0.5s;
   -o-transition: all 0.5s;
   transition: all 0.5s;
+}
+/* line 21, ../sass/components/_header.scss */
+header #secondary-menu .links li:not(.first) {
+  display: none;
 }
 
 /**
