--- a/themes/raiser/sass/base/_base.scss
+++ b/themes/raiser/sass/base/_base.scss
@@ -1,3 +1,5 @@
+@import "//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css";
+
 body {
   background: $page-bg;
   font-family: $raiser-body-font;
