--- a/themes/raiser/sass/base/_base.scss
+++ b/themes/raiser/sass/base/_base.scss
@@ -8,6 +8,7 @@ body {
 // HEADINGS
 h1, h2, h3, h4, h5, h6 {
   font-family: $raiser-heading-font;
+  font-weight: normal;
 }
 
 h1 { font-size: 2em;    }
