--- a/themes/raiser/sass/layouts/_raiser_layout.scss
+++ b/themes/raiser/sass/layouts/_raiser_layout.scss
@@ -1,3 +1,9 @@
-#main {
+$zen-column-count: 12;
+$zen-gutter-width: 20px;
+
+#main #content {
+  @include zen-grid-container;
+  padding-bottom: 2em;
   margin: 0 auto;
+  max-width: 1140px; 
 }
